--- a/404.html
+++ b/404.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0; url=/" />
     <script type="text/javascript">
-      // Ez a script biztosítja, hogy minden nem létező útvonal az index.html-re irányuljon
+      // Ez a script biztosítja, hogy minden nem létező útvonal az index.html-re irányuljon a vizslaswap.com domain-en
       var pathname = window.location.pathname;
-      window.location.href = "/" + pathname;
+      window.location.href = "https://www.vizslaswap.com" + pathname;
     </script>
   </head>
   <body>
